# ytlite

./: .dockerignore  .env.example  .env.wordpress.example  .gitignore  DOCS.md  Dockerfile  Dockerfile.app  Dockerfile.base  Makefile  README.md  REFACTORING_SUMMARY.md  TECHNICAL_SPECIFICATIONS.md  api_response.json  api_test.json  check_command_output.py  check_env.py  check_env_simple.py  check_environment.py  check_ffmpeg.py  check_ffmpeg_install.py  check_permissions.py  check_python.py  check_python_simple.py  check_system.py  check_video.py  check_video_env.py  check_video_gen.py  check_video_output.py  cli_demo  config.yaml  debug_generation_test  debug_info.py  debug_output_test.py  debug_server.py  debug_test  debug_video_gen.py  debug_video_generation.py  demo_test_xml  detailed_video_test.py  diagnose_ffmpeg.py  (+65 more)
backup/: javascript_old.py
dev_agent_scripts/: deep_logs.sh  install.sh  repair_advanced.sh  repair_basic.sh  run.sh  setup_env.sh  tools_init.sh  tools_run.sh
scripts/: automation.sh  check-deps.sh  clean.sh  create-example-project.sh  daily.sh  dev-watch.sh  diagnose.sh  docker-all-services.sh  docker-build-app.sh  docker-build-base.sh  docker-build-fast.sh  docker-dev.sh  docker-run.sh  docker-shell.sh  docker-tts.sh  docker-upload.sh  docker-video.sh  generate.sh  generate_static_js.py  gui.sh  install-os-deps.sh  install.sh  preview.sh  publish-pypi.sh  publish.sh  quick.sh  (+10 more)
tauri-youtube-oauth/src-tauri/: Cargo.toml  tauri.conf.json
tauri-youtube-oauth/src-tauri/src/: lib.rs  main.rs
tauri-youtube-oauth/src-tauri/tests/: integration_test.rs
(+150 files in other folders)
